fix: table text spacing

--- a/src/app/pages/movies/movies.component.scss
+++ b/src/app/pages/movies/movies.component.scss
@@ -30,4 +30,9 @@ mat-header-cell {
 
 mat-paginator {
 	background-color: #192038;
+	color: white;
+}
+
+.string-fields {
+	width: 175px;
 }
